language/move-lang/tests/move_check/translated_ir_tests/move/signer/move_to_non_signer.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/translated_ir_tests/move/signer/move_to_non_signer.move:4:9
  │
3 │     fun t0(s: &address) {
  │                ------- Given: 'address'
4 │         move_to(s, R { f: false })
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^
  │         │
  │         Invalid call of 'move_to'. Invalid argument for parameter '0'
  │         Expected: 'signer'

error[E04007]: incompatible types
   ┌─ tests/move_check/translated_ir_tests/move/signer/move_to_non_signer.move:12:9
   │
11 │     fun t0<T>(s: address) {
   │                  ------- Given: 'address'
12 │         move_to(s, R { f: false })
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │
   │         Invalid call of 'move_to'. Invalid argument for parameter '0'
   │         Expected: '&signer'

